# Apollo

./: .gitignore  CMakeLists.txt  ideas
include/: controller.hpp  generator.hpp  handler.hpp  letter.hpp  renderable.hpp  shaderHandler.hpp  utils.hpp
include/image/: image_loader.hpp  jpeg_loader.hpp
include/texture/: perlinNoise.hpp  perlin_noise.hpp
models/: sphere.raw  test.raw  test2.raw  test_richa.raw  test_star.raw  triangle.raw
shaders/: fshader.glsl  vshader.glsl
src/: .renderable.cpp.swp  generator.cpp  handler.cpp  letter.cpp  main.cpp  renderable.cpp
src/image/: image_loader.cpp  jpeg_loader.cpp
src/texture/: perlinNoise.cpp  perlin_noise.cpp
